# Automated_Tasker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/Automated_Tasker/: __main__.py  daemon.py  subdaemon.py  tasklist.py
src/Automated_Tasker/services/: calendar.py  discord.py  maps.py  pushbullet.py  switchbot.py
src/Automated_Tasker/subdaemons/: litter_checker.py
src/Automated_Tasker/tasks/: alarm.py  nightlight.py  swimschedule.py  todolist.py  traffic_alert.py  weather.py  wordgame.py
src/Automated_Tasker/utils/: ottawa_swimschedule.py  vault.py
