[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{"name" = "Martin Martinov"}]
description = "Python daemon for executing various tasks linked to various services."
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "Automated_Tasker"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "pydantic~=2.0",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "build",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-pretty",
  "ruff",
  "cryptography",
  "asyncio",
  "aiohttp",
  "google-auth-httplib2",
  "google-api-python-client",
  "google-auth",
  "google-auth-oauthlib",
  "pushbullet.py",
  "bs4",
]

[project.scripts]
Automated_Tasker = "Automated_Tasker.__main__:main"

[tool.ruff]
exclude = [".venv"]
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
]